<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UD6_02-DataBaseUD6</string>
    <string name="hello_blank_fragment">Para la próxima entrega :D</string>
    <string name="Title">Título</string>
    <string name="new_task">Nueva tarea</string>
    <string name="Task">Task</string>
    <string name="TaskList">TaskList</string>
    <string name="Description">Descripción</string>
    <string name="save">Guardar</string>
    <string name="detail_task">Detalles Tarea</string>
    <string name="status">Estado</string>
    <string name="deleted">Eliminado</string>
    <string name="deleted_error">No se puedo eliminar</string>
    <string name="connection_error">Error de conexion</string>
    <string name="format_error">Error de formato en la petición</string>
    <string name="no_task">Todavía no has añadido ninguna tarea</string>
    <string name="no_lists">Comienza a añadir tu primera lista</string>
    <string name="list_description">Aún no hay descripcion</string>
    <string name="priority">Prioridad 0</string>
    <string name="no_date">Fecha desconocida</string>
    <string-array name="priorityarray" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>