<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    tools:context=".usescases.tasks.TasksFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#84ACAC"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_list_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textAppearance="@style/custom_big_titles"
                app:layout_constraintEnd_toStartOf="@+id/ib_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_list_description"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/list_description"
                android:textAppearance="@style/custom_body1"
                app:layout_constraintEnd_toEndOf="@+id/tv_list_title"
                app:layout_constraintStart_toStartOf="@+id/tv_list_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_title" />

            <ImageButton
                android:id="@+id/iv_bin"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@color/bg"
                android:src="@drawable/ic_baseline_delete_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ib_edit"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/ib_edit"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/bg"
                android:src="@drawable/ic_baseline_edit_30"
                app:layout_constraintBottom_toBottomOf="@+id/tv_list_title"
                app:layout_constraintEnd_toStartOf="@+id/iv_bin"
                app:layout_constraintTop_toTopOf="@+id/tv_list_title"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_priority"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:text="@string/priority"
                android:textAppearance="@style/custom_body1_b"
                app:layout_constraintBottom_toBottomOf="@+id/tv_list_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_list_description"
                app:layout_constraintTop_toTopOf="@+id/tv_list_description" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Description"
                app:layout_constraintEnd_toEndOf="@+id/tv_list_description"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tv_list_description"
                app:layout_constraintTop_toTopOf="@+id/tv_list_description"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Title"
                app:layout_constraintBottom_toBottomOf="@+id/tv_list_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_list_title"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/tv_list_title"
                app:layout_constraintTop_toTopOf="@+id/tv_list_title"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_list_description"
                app:layout_constraintEnd_toEndOf="@+id/tv_priority"
                app:layout_constraintStart_toEndOf="@+id/tv_list_description"
                app:layout_constraintTop_toTopOf="@+id/tv_list_description"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btn_save_edited_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/save"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_list_description"
                app:layout_constraintStart_toStartOf="@+id/tv_list_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_description"
                tools:text="@string/save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_no_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/no_task"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>