<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usescases.tasks.AddTaskFragment" >

    <TextView
        android:id="@+id/tv_detail_task_dont_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_task"
        android:textAppearance="@style/custom_big_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_task_title_dont_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Title"
        android:textAppearance="@style/custom_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_task_dont_edit" />

    <TextView
        android:id="@+id/tv_detail_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/Title"
        android:textAppearance="@style/custom_body1"
        app:layout_constraintBottom_toBottomOf="@+id/et_detail_task_title_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_detail_task_title_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_detail_task_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Title"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_task_title_dont_edit"
        tools:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_detail_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:textAppearance="@style/custom_body1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_detail_description_dont_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Description"
        android:textAppearance="@style/custom_titles"
        app:layout_constraintStart_toStartOf="@+id/et_detail_task_title_container"
        app:layout_constraintTop_toBottomOf="@+id/et_detail_task_title_container" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textAppearance="@style/custom_body1"
        app:layout_constraintEnd_toEndOf="@+id/et_detail_task_description_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_detail_task_description_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_detail_task_description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description_dont_edit"
        tools:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_detail_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:textAppearance="@style/custom_body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        android:textAppearance="@style/custom_button"
        app:layout_constraintEnd_toEndOf="@+id/et_detail_task_description_container"
        app:layout_constraintStart_toStartOf="@+id/et_detail_task_description_container"
        app:layout_constraintTop_toBottomOf="@+id/et_detail_task_description_container"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_task_title_dont_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_task_title_dont_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit"
        app:layout_constraintTop_toTopOf="@+id/btn_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textAppearance="@style/custom_body1"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_task_dont_edit"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_task_dont_edit"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_task_dont_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>